[package]
name = "secure-notes"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe.workspace = true
egui.workspace = true
egui_extras.workspace = true
serde.workspace = true
serde_json.workspace = true
chacha20poly1305.workspace = true
argon2.workspace = true
rand.workspace = true
base64.workspace = true
pulldown-cmark.workspace = true
chrono.workspace = true
directories.workspace = true
reqwest = { version = "0.12", features = ["blocking", "json"] }
image = { version = "0.25", features = ["png", "jpeg"] }
geo = "0.28"
geojson = "0.24"
uuid = { version = "1.10", features = ["v4", "serde"] }
parking_lot = "0.12"
